kube/sonarqube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sonarqube
  namespace: sonarqube

spec:
  rules:
    - host: sonarqube.sentimail.samoth.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  sonarqube-sonarqube
                port:
                  number: 9000
